--- a/BTL_QLKS_JAVA/nbproject/project.properties
+++ b/BTL_QLKS_JAVA/nbproject/project.properties
@@ -34,6 +34,8 @@ excludes=
 file.reference.commons-collections4-4.5.0.jar=C:\\Users\\huynh\\Downloads\\commons-collections4-4.5.0.jar
 file.reference.flatlaf-3.6.jar=C:\\Users\\huynh\\Downloads\\flatlaf-3.6.jar
 file.reference.hamcrest-core-1.3.jar=C:\\Users\\huynh\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\hamcrest-core-1.3.jar
+file.reference.jcalendar-1.4-lib=C:\\Users\\huynh\\Downloads\\jcalendar-1.4\\lib
+file.reference.jcalendar-1.4.jar=C:\\Users\\huynh\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\huynh\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-experimental.jar=C:\\Users\\huynh\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
 file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\huynh\\Downloads\\jfreechart-1.0.19\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
@@ -72,7 +74,9 @@ javac.classpath=\
     ${file.reference.poi-ooxml-5.4.1.jar}:\
     ${file.reference.commons-collections4-4.5.0.jar}:\
     ${file.reference.xmlbeans-5.3.0.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.1.2.jar}
+    ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
+    ${file.reference.jcalendar-1.4-lib}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
